Frontend/src/components/Header/Header.scss
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 10px;
  border-bottom: 2px solid #55691d;
  .logo {
    width: 40%;
  }
  .burger {
    display: none;
    font-size: 25px;
    background: none;
    border: none;
    margin-right: 20px;
    outline: none;
  }
  .navContainer {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    flex-grow: 1;
    gap: 20px;

    button {
      display: flex;
      position: relative;
      align-items: center;
      justify-content: center;
      padding: 8px 25px;
      right: 20px;
      background-color: #4c5f1c;
      border: 8px solid #6a7c2e;
      color: white;
      gap: 8px;
      border-radius: 50px;
      cursor: pointer;
      transition: all 0.3s;
    }
    button:hover {
      border: 8px solid #4c5f1c;
      background-color: #6a7c2e;
    }
    button:active {
      border: 5px solid #c0dfff;
    }
  }
  @media screen and (max-width: 768px) {
    .burger {
      display: block;
    }
    .navContainer {
      display: none;
      flex-direction: column;
      align-items: flex-end;
      position: absolute;
      text-decoration: none;
      top: 70px;
      right: 20px;
      background-color: #6a7c2e;
      padding: 10px;
      border-radius: 10px;
      z-index: 10;
      width: 150px;
    }
    .navContainer.open {
      display: flex;
    }
    .navContainer button {
      width: 18vh;
      right: auto;
      span {
        font-size: 13px;
      }
    }
  }
}

